[gd_scene load_steps=30 format=3 uid="uid://cspfvpjpgek0r"]

[ext_resource type="Texture2D" uid="uid://s30o4klguiwk" path="res://assets/craftpix-net-199956-free-sci-fi-antagonists-pixel-character-pack/3/Attack2.png" id="1_enrbn"]
[ext_resource type="Script" uid="uid://c1mt1sf276olg" path="res://inimigo.gd" id="1_l0fh3"]
[ext_resource type="Texture2D" uid="uid://8cbl8knt61w2" path="res://assets/craftpix-net-199956-free-sci-fi-antagonists-pixel-character-pack/3/Death.png" id="2_l0fh3"]
[ext_resource type="Texture2D" uid="uid://h42nxib02vi1" path="res://assets/craftpix-net-199956-free-sci-fi-antagonists-pixel-character-pack/3/Idle.png" id="3_o83ti"]
[ext_resource type="Texture2D" uid="uid://wdxo7j33v41b" path="res://assets/craftpix-net-199956-free-sci-fi-antagonists-pixel-character-pack/3/Attack1.png" id="4_5cs1f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ekwcj"]
atlas = ExtResource("1_enrbn")
region = Rect2(360, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_eewpo"]
atlas = ExtResource("1_enrbn")
region = Rect2(288, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3af6e"]
atlas = ExtResource("1_enrbn")
region = Rect2(0, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nglqo"]
atlas = ExtResource("2_l0fh3")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2mw5"]
atlas = ExtResource("2_l0fh3")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kus2f"]
atlas = ExtResource("2_l0fh3")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftkuo"]
atlas = ExtResource("2_l0fh3")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hydjg"]
atlas = ExtResource("2_l0fh3")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_g12hr"]
atlas = ExtResource("2_l0fh3")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkxog"]
atlas = ExtResource("3_o83ti")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wmjm"]
atlas = ExtResource("3_o83ti")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fko2f"]
atlas = ExtResource("3_o83ti")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtama"]
atlas = ExtResource("3_o83ti")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0ufr"]
atlas = ExtResource("4_5cs1f")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiowm"]
atlas = ExtResource("4_5cs1f")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq468"]
atlas = ExtResource("4_5cs1f")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpgks"]
atlas = ExtResource("4_5cs1f")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwxhn"]
atlas = ExtResource("4_5cs1f")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6087k"]
atlas = ExtResource("4_5cs1f")
region = Rect2(480, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_e4h0q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekwcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eewpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3af6e")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nglqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2mw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kus2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftkuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hydjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g12hr")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkxog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wmjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fko2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtama")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0ufr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiowm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq468")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpgks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwxhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6087k")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_baiys"]
size = Vector2(11, 27.609375)

[sub_resource type="CircleShape2D" id="CircleShape2D_enrbn"]
radius = 50.24938

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o83ti"]
size = Vector2(22.5, 29.4375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0fh3"]
size = Vector2(25, 20.625)

[node name="Inimigo" type="CharacterBody2D"]
script = ExtResource("1_l0fh3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(23, -26)
sprite_frames = SubResource("SpriteFrames_e4h0q")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.73999655

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 8.8046875)
shape = SubResource("RectangleShape2D_baiys")

[node name="RayCastChao" type="RayCast2D" parent="."]
position = Vector2(9.000001, -9.000006)
rotation = -0.13788101
scale = Vector2(0.99999994, 0.99999994)
target_position = Vector2(3.3884072, 33.786373)

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_enrbn")
disabled = true
debug_color = Color(0.60299367, 0.52688026, 0.3678445, 0.41960785)

[node name="Hit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2(1, 8.71875)
shape = SubResource("RectangleShape2D_o83ti")
debug_color = Color(0.63475746, 0.36026123, 0.96784955, 0.41960785)

[node name="Head" type="Area2D" parent="."]
position = Vector2(111, 149)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(-110, -165.3125)
shape = SubResource("RectangleShape2D_l0fh3")
debug_color = Color(0, 0.6261104, 0.51705676, 0.41960785)

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="Hit" to="." method="_on_hit_body_entered"]
[connection signal="body_entered" from="Head" to="." method="_on_head_body_entered"]
